# learning-rust-rabbitmq

./: Dockerfile.publisher  README.md  docker-compose.yaml
consumer/: Cargo.toml  entry.sh
consumer/src/: main.rs
publisher/: Cargo.toml  Dockerfile
publisher/src/: main.rs
